# mipdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ebrains.yml  publish-on-release.yaml  run-tests.yaml
mipdb/: __init__.py  commands.py  constants.py  credentials.py  data_frame.py  data_frame_schema.py  database.py  dataelements.py  dataset.py  event.py  exceptions.py  logger.py  mipdb.py  monetdb.py  monetdb_tables.py  properties.py  reader.py  schema.py  sqlite.py  sqlite_tables.py  tables.py  usecases.py
mipdb/databases/: __init__.py  monetdb.py  monetdb_patch.py  monetdb_tables.py  sqlite.py  sqlite_tables.py
mipdb/duckdb/: __init__.py  data_tables.py  database.py  metadata_tables.py  schema.py
mipdb/monetdb/: monetdb.py  monetdb_tables.py  schema.py
mipdb/services/: __init__.py  common.py  database.py  datamodels.py  datasets.py
mipdb/sqlite/: sqlite.py  sqlite_tables.py
tests/: config.toml  conftest.py  mocks.py  test_commands.py  test_data_frame.py  test_data_frame_schema.py  test_database.py  test_dataelements.py  test_dataset.py  test_event.py  test_properties.py  test_reader.py  test_schema.py  test_services.py  test_tables.py  test_usecases.py
tests/data/: data_model.json  dataset.csv  schema.json
tests/data/fail/data_model/: CDEsMetadata.json  dataset_exceeds_min.csv  invalid_enum.csv
tests/data/fail/data_model_longitudinal_v_1_0/: CDEsMetadata.json  dataset.csv
tests/data/fail/data_model_v_1_0/: CDEsMetadata.json  column_not_present_in_cdes.csv  dataset_exceeds_max.csv  dataset_exceeds_min.csv  dataset_is_not_unique.csv  duplication_column_row_id.csv  invalid_enum.csv  invalid_type1.csv  invalid_type2.csv  missing_column_dataset.csv  missing_column_row_id.csv  missing_column_subjectcode.csv
tests/data/success/data_model/: CDEsMetadata.json  dataset1.csv
tests/data/success/data_model1/: CDEsMetadata.json
tests/data/success/data_model1_v_1_0/: CDEsMetadata.json  dataset10.csv  dataset20.csv
tests/data/success/data_model_longitudinal_v_1_0/: CDEsMetadata.json  dataset.csv
tests/data/success/data_model_v_1_0/: CDEsMetadata.json  dataset.csv  dataset1.csv  dataset10.csv  dataset123.csv  dataset2.csv
