[tool.poetry]
name = "mipdb"
version = "2.4.6"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
SQLAlchemy = "~1.3"
sqlalchemy_monetdb = "~1.0"
pymonetdb = "~1.6"
pandas = "~1.5"
pandera = "~0.13"
click = "~8.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-xdist = "~3.1"
ipython = "~8.8"
pdbpp = "~0.10"
black = "~22.12"
pre-commit = "~2.21"
coverage = {extras = ["toml"], version = "~7.0"}
pytest-cov = "~4.0"
pylint = "~2.15"
rope = "~1.7"
docker = "~6.0"

[tool.poetry.scripts]
mipdb = "mipdb.commands:entry"

[tool.pytest.ini_options]
markers = [
    "database: these tests depend on an external dockerized MonetDB service running (deselect with '-m \"not database\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ['mipdb']
dynamic_context = 'test_function'

[tool.coverage.report]
exclude_lines = ['def __repr__', 'raise NotImplementedError', 'pragma: no cover', 'pass']
show_missing = true

[tool.coverage.html]
show_contexts = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
