[tool.poetry]
name = "mipdb"
version = "3.0.7"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python            = "~3.10"
SQLAlchemy        = "~2.0"
sqlalchemy_monetdb = "~2.0"
pymonetdb         = "~1.8"
pandas            = "~2.3"
pandera           = "~2.3"
click             = "~8.2"
toml              = "~0.10"
numpy             = "~2.2"
setuptools        = "~80.9"

[tool.poetry.dev-dependencies]
pytest            = "~8.4"
pytest-xdist      = "~3.8"
ipython           = "~8.37"
pdbpp             = "~0.11"
black             = "~25.1"
pre-commit        = "~1.21"
coverage          = {extras = ["toml"], version = "~7.9"}
pytest-cov        = "~6.2"
pylint            = "~3.3"
rope              = "~1.14"
docker            = "~7.1"

[tool.poetry.scripts]
mipdb = "mipdb.commands:entry"

[tool.pytest.ini_options]
markers = [
    "database: these tests depend on an external dockerized MonetDB service running (deselect with '-m \"not database\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ['mipdb']
dynamic_context = 'test_function'

[tool.coverage.report]
exclude_lines = ['def __repr__', 'raise NotImplementedError', 'pragma: no cover', 'pass']
show_missing = true

[tool.coverage.html]
show_contexts = true
